that's about it lol

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,14 +11,14 @@
     <img
       alt=""
       class="icon"
-      src="/assets/icons/mastodon.svg">
+      src="/assets/icons/mastodon.png">
     @jame@wetdry.world
   </a>
   <a class="footer-item pretty-button" href="https://twitter.com/real__jame">
     <img
       alt=""
       class="icon"
-      src="/assets/icons/twitter.svg">
+      src="/assets/icons/twitter.png">
     @real__jame
   </a>
 </footer>
