--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -76,16 +76,48 @@
         </a>
       </li>
     </ul>
-    <b class="divider"><img
+    <hr>
+    <b class="sidebar-category">
+      <img
         src="/assets/silk/page_white_go.png"
         height="16"
         width="16"
         alt=""
-        class="icon">External Links
+        class="icon">
+      External Links
     </b>
     <ul>
-      <li><a class="header-item" href="https://wiki.realja.me"><img src="/assets/icons/rbxlegacydocs.ico" height="16" width="16" alt="" class="icon">RBX Legacy Docs</a></li>
-      <li><a class="header-item" href="https://textarea.site"><img src="/assets/icons/textarea.ico" height="16" width="16" alt="" class="icon">textarea.site</a></li>
+      <li>
+        <a class="header-item" href="https://wiki.realja.me"><img
+            src="/assets/icons/rbxlegacydocs.png"
+            height="16"
+            width="16"
+            alt=""
+            class="icon">RBX Legacy Docs</a>
+      </li>
+      <li>
+        <a class="header-item" href="https://textarea.site"><img
+            src="/assets/icons/textarea.png"
+            height="16"
+            width="16"
+            alt=""
+            class="icon">textarea.site</a>
+      </li>
     </ul>
+    <hr>
+    <p>
+      <b>
+        <a href="https://realja.me"><img
+            src="/assets/silk/star.png"
+            height="16"
+            width="16"
+            alt=""
+            class="icon">
+          Modern Site</a>
+      </b>
+      <i>
+        <a href="/blog/simple-layout.html">(why a simple layout?)</a>
+      </i>
+    </p>
   {% endif %}
 </div>
