--- a/_includes/post-list-card.html
+++ b/_includes/post-list-card.html
@@ -11,48 +11,55 @@
     {% if count < limit %}
       <li class="post-item card">
         {% assign date_format = site.minima.date_format | default: '%b %-d, %Y' %}
-        <span class="post-meta-card">
-          {% if posts == site.posts %}
-            {{ post.category }}
+        <p>
+          <span class="post-meta-card">
+            {% if posts == site.posts %}
+              {{ post.category }}
+              ·
+            {% endif %}
+            {{ post.date | date: date_format }}
             ·
+            {{ post.content | number_of_words }} words
+          </span>
+        </p>
+
+        <h2>
+          <a class="post-link" href="{{ post.url | relative_url }}">
+            {{ post.title | default: "Untitled post" }}
+          </a>
+        </h2>
+
+        <p>
+          {% if post.description %}
+            {{ post.description }}
           {% endif %}
-          {{ post.date | date: date_format }}
-          ·
-          {{ post.content | number_of_words }} words
-        </span>
+        </p>
 
-        <a class="post-link" href="{{ post.url | relative_url }}">
-          {{ post.title | default: "Untitled post" }}
-        </a>
+        <p>
+          {% if post.image %}
+            <img src="{{ post.image }}" width="512">
+          {% else %}
+            {{ post.excerpt }}
+          {% endif %}
+        </p>
 
-        {% if post.description %}
-          {{ post.description }}
-        {% endif %}
-
-        {% if post.image %}
-          <img
-            src="{{ post.image }}"
-            width="512"
-            height="384">
-        {% else %}
-          {{ post.excerpt }}
-        {% endif %}
-
-        <span class="topics">
-          {% for tag in post.tags %}
-            {% assign icon = site.tagicons[tag] %}
-            <a href="/_tags/{{include.category}}/{{ tag }}" class="topic-item pretty-button">
-              {% if icon %}
-                <img
-                  src="{{icon}}"
-                  height="16"
-                  width="16"
-                  alt=""
-                  class="icon">
-              {% endif %}
-              {{ tag }}</a>
-          {% endfor %}
-        </span>
+        <p>
+          <span class="topics">
+            {% for tag in post.tags %}
+              {% assign icon = site.tagicons[tag] %}
+              <a href="/_tags/{{include.category}}/{{ tag }}" class="topic-item pretty-button">
+                {% if icon %}
+                  <img
+                    src="{{icon}}"
+                    height="16"
+                    width="16"
+                    alt=""
+                    class="icon">
+                {% endif %}
+                {{ tag }}</a>
+            {% endfor %}
+          </span>
+        </p>
       </li>
       {% assign count = count | plus: 1 %}
     {% else %}
