--- a/_layouts/dailynote.html
+++ b/_layouts/dailynote.html
@@ -8,7 +8,7 @@ permalink: /dailynote/:title
   itemtype="http://schema.org/BlogPosting">
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">
-      {{ page.title }}
+      {{ page.title | emoji_to_png }}
     </h1>
     <p class="post-meta">
       {% if page.description %}
@@ -25,7 +25,7 @@ permalink: /dailynote/:title
     </p>
   </header>
 
-  <div class="post-content e-content" itemprop="articleBody">{{ content }}</div>
+  <div class="post-content e-content" itemprop="articleBody">{{ content | emoji_to_png }}</div>
 
   <a href="{{ page.url | relative_url }}" hidden></a>
 </article>
