--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     {% include sidebar.html %}
-    <div class="main">{{ content }}</div>
+    <div class="main">{{ content | emoji_to_png }}</div>
     {% include footer.html %}
   </body>
 </html>
