ok now we're almost good note that the 1 dailynote isnt done yet

--- a/_includes/buttonrow.html
+++ b/_includes/buttonrow.html
@@ -1,77 +1,77 @@
 <div class="button-row">
-	<a href="https://nick64.me"><img
-			src="/assets/buttons/nick64.gif"
-			width="88"
-			height="31"
-			alt="nick64.me"></a>
-	<a href="http://razorback95.com"><img
-			src="/assets/buttons/razorback95.gif"
-			width="88"
-			height="31"
-			alt="Razorback"></a>
-	<a href="https://landchad.net"><img
-			src="/assets/buttons/landchad.gif"
-			width="88"
-			height="31"
-			alt="Get a website - LandChad.net"></a>
-	<a href="https://yesterweb.org/no-to-web3/"><img
-			src="/assets/buttons/saynotoweb3.gif"
-			width="88"
-			height="31"
-			alt="Say no to Web3 - Keep the web free"></a>
-	<a href="https://sizeof.cat"><img
-			src="/assets/buttons/sizeofcat.jpg"
-			width="88"
-			height="31"
-			alt="sizeof(cat)"></a>
-	<a href="https://wiby.me"><img
-			src="/assets/buttons/wiby.gif"
-			width="88"
-			height="31"
-			alt="wiby.me - Search"></a>
-	<a href="https://neocities.org"><img
-			src="/assets/buttons/neocities.gif"
-			width="88"
-			height="31"
-			alt="NeoCities.org - The web is yours"></a>
-	<a href="https://realja.me"><img
-			src="/realjame.gif"
-			width="88"
-			height="31"
-			alt="realja.me"></a>
-	<a href="https://dreampipe.net/"><img
-			src="/assets/buttons/dreamcast.gif"
-			width="88"
-			height="31"
-			alt="Dreamcast"></a>
-	<a href="https://maia.crimew.gay"><img
-			src="/assets/buttons/maiacrimewgay.png"
-			width="88"
-			height="31"
-			alt="maia.crimew.gay"></a>
-	<a href="https://ashiecorner.xyz"><img
-			src="/assets/buttons/ashiecorner.gif"
-			width="88"
-			height="31"
-			alt="ashiecorner"></a>
-	<a href="https://zencorner.xyz"><img
-			src="/assets/buttons/zencorner.gif"
-			width="88"
-			height="31"
-			alt="zencorner"></a>
-	<a href="https://cadence.moe"><img
-			src="/assets/buttons/cadence.png"
-			width="88"
-			height="31"
-			alt="Cadence Now!"></a>
-	<a href="https://corru.observer"><img
-			src="/assets/buttons/corruobserver.gif"
-			width="88"
-			height="31"
-			alt="corru.observer"></a>
-	<a href="https://theoldnet.com"><img
-			src="/assets/buttons/theoldnet.gif"
-			width="88"
-			height="31"
-			alt="The Old Net"></a>
+  <a href="http://nick64.me"><img
+      src="/assets/buttons/nick64.gif"
+      width="88"
+      height="31"
+      alt="nick64.me"></a>
+  <a href="http://razorback95.com"><img
+      src="/assets/buttons/razorback95.gif"
+      width="88"
+      height="31"
+      alt="Razorback"></a>
+  <a href="http://landchad.net"><img
+      src="/assets/buttons/landchad.gif"
+      width="88"
+      height="31"
+      alt="Get a website - LandChad.net"></a>
+  <a href="http://yesterweb.org/no-to-web3/"><img
+      src="/assets/buttons/saynotoweb3.gif"
+      width="88"
+      height="31"
+      alt="Say no to Web3 - Keep the web free"></a>
+  <a href="http://sizeof.cat"><img
+      src="/assets/buttons/sizeofcat.jpg"
+      width="88"
+      height="31"
+      alt="sizeof(cat)"></a>
+  <a href="http://wiby.me"><img
+      src="/assets/buttons/wiby.gif"
+      width="88"
+      height="31"
+      alt="wiby.me - Search"></a>
+  <a href="http://neocities.org"><img
+      src="/assets/buttons/neocities.gif"
+      width="88"
+      height="31"
+      alt="NeoCities.org - The web is yours"></a>
+  <a href="http://realja.me"><img
+      src="/realjame.gif"
+      width="88"
+      height="31"
+      alt="realja.me"></a>
+  <a href="http://dreampipe.net/"><img
+      src="/assets/buttons/dreamcast.gif"
+      width="88"
+      height="31"
+      alt="Dreamcast"></a>
+  <a href="http://maia.crimew.gay"><img
+      src="/assets/buttons/maiacrimewgay.png"
+      width="88"
+      height="31"
+      alt="maia.crimew.gay"></a>
+  <a href="http://ashiecorner.xyz"><img
+      src="/assets/buttons/ashiecorner.gif"
+      width="88"
+      height="31"
+      alt="ashiecorner"></a>
+  <a href="http://zencorner.xyz"><img
+      src="/assets/buttons/zencorner.gif"
+      width="88"
+      height="31"
+      alt="zencorner"></a>
+  <a href="http://cadence.moe"><img
+      src="/assets/buttons/cadence.png"
+      width="88"
+      height="31"
+      alt="Cadence Now!"></a>
+  <a href="http://corru.observer"><img
+      src="/assets/buttons/corruobserver.gif"
+      width="88"
+      height="31"
+      alt="corru.observer"></a>
+  <a href="http://theoldnet.com"><img
+      src="/assets/buttons/theoldnet.gif"
+      width="88"
+      height="31"
+      alt="The Old Net"></a>
 </div>
