--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -27,10 +27,11 @@
             {% endif %}
             {{ tag }}</a>
         {% endfor %}
+        ·
       </span>
       {% assign date_format = site.minima.date_format | default: '%b %-d, %Y' %}
       {% comment %} i love inline styles 🤤🤤🤤 {% endcomment %}
-      <span style="padding-left: 0.1em;">
+      <span>
         {% if posts == site.posts %}
           {{ post.category }}
           ·
