more file syncing

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -72,14 +72,14 @@
           class="icon">External Links</div>
 
       <a class="header-item" href="https://wiki.realja.me"><img
-          src="/assets/icons/rbxlegacydocs.ico"
+          src="/assets/icons/rbxlegacydocs.png"
           height="16"
           width="16"
           alt=""
           class="icon">RBX Legacy Docs
       </a>
       <a class="header-item" href="https://textarea.site"><img
-          src="/assets/icons/textarea.ico"
+          src="/assets/icons/textarea.png"
           height="16"
           width="16"
           alt=""
