--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,12 @@
   {% include head.html %}
 
   <body>
-    <!-- Hi -->
-    <!-- I've written comments on several posts and pages of this website. -->
-    <!-- You can try opening the latest post and check. -->
-    <!-- You'll have to dig a bit, expand div > main > "post-content" div -->
-    <!-- But if you do that, you'll find some more serious reflections. -->
-    <!-- https://realja.me/bloxycola.jpg -->
+    {% comment %} <!-- Hi -->
+          <!-- I've written comments on several posts and pages of this website. -->
+          <!-- You can try opening the latest post and check. -->
+          <!-- You'll have to dig a bit, expand div > main > "post-content" div -->
+          <!-- But if you do that, you'll find some more serious reflections. -->
+        <!-- https://realja.me/bloxycola.jpg --> {% endcomment %}
     {% comment %} {% include snowjs.html %} {% endcomment %}
     {% include sidebar.html %}
     <div class="page-content">
