--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,12 +17,12 @@
         src="/assets/icons/mastodon.png">
       @jame@wetdry.world
     </a>
-    <a class="footer-item pretty-button" href="https://twitter.com/real__jame">
-      <img
-        alt=""
-        class="icon"
-        src="/assets/icons/twitter.png">
-      @real__jame
-    </a>
+  {% comment %} <a class="footer-item pretty-button" href="https://twitter.com/real__jame">
+          <img
+            alt=""
+            class="icon"
+            src="/assets/icons/twitter.png">
+          @real__jame
+      </a> {% endcomment %}
   </p>
 </footer>
