add lua to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -103,6 +103,14 @@
             alt=""
             class="icon">textarea.site</a>
       </li>
+      <li>
+        <a class="header-item" href="https://lua.realja.me"><img
+            src="/assets/icons/lua.png"
+            height="16"
+            width="16"
+            alt=""
+            class="icon">Lua minifier</a>
+      </li>
     </ul>
     <hr>
     <p>
