add lua to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -85,6 +85,13 @@
           alt=""
           class="icon">textarea.site
       </a>
+      <a class="header-item" href="https://lua.realja.me"><img
+          src="/assets/icons/lua.png"
+          height="16"
+          width="16"
+          alt=""
+          class="icon">Lua minifier
+      </a>
       <p class="header-item">
         <a href="http://simple.realja.me"><img
             src="/assets/silk/star.png"
@@ -98,7 +105,6 @@
           </a>
         </i>
       </p>
-
     </nav>
   {% endif %}
 </header>
